[gd_scene load_steps=7 format=3 uid="uid://dub5kupsresd5"]

[ext_resource type="Script" path="res://games/ShovelingGame/ShovelingGame.gd" id="1_fdsqn"]
[ext_resource type="Texture2D" uid="uid://cp7hhlfddrv3k" path="res://assets/sprites/shovel.png" id="2_mrsnu"]
[ext_resource type="Texture2D" uid="uid://c61nx5e7lfbcx" path="res://assets/sprites/coal.png" id="3_sgodn"]
[ext_resource type="Texture2D" uid="uid://bchy32lfi1sbr" path="res://assets/sprites/robit.png" id="4_j6fjg"]
[ext_resource type="AudioStream" uid="uid://dg8nljehghjnt" path="res://assets/sfx/shovelingSFX.wav" id="5_stpg4"]
[ext_resource type="AudioStream" uid="uid://cjvl84oy8suc7" path="res://assets/sfx/fireflareSFX.wav" id="6_2mche"]

[node name="ShovelingGame" type="Node2D"]
script = ExtResource("1_fdsqn")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 240.0
offset_bottom = 160.0
color = Color(1, 0.65098, 0.333333, 1)

[node name="Shovel" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(114, 50)
texture = ExtResource("2_mrsnu")

[node name="A" type="Label" parent="."]
visible = false
z_index = 3
offset_left = 34.0
offset_top = 77.0
offset_right = 61.0
offset_bottom = 100.0
text = "\"A\""

[node name="W" type="Label" parent="."]
visible = false
z_index = 3
offset_left = 103.0
offset_top = 10.0
offset_right = 133.0
offset_bottom = 33.0
text = "\"W\""

[node name="D" type="Label" parent="."]
visible = false
z_index = 3
offset_left = 168.0
offset_top = 77.0
offset_right = 198.0
offset_bottom = 100.0
text = "\"D\""

[node name="Cycles_Label" type="Label" parent="."]
offset_left = 78.0
offset_top = 123.0
offset_right = 118.0
offset_bottom = 146.0

[node name="Coal_Left" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(47, 78)
texture = ExtResource("3_sgodn")

[node name="Coal_Right" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(180, 78)
texture = ExtResource("3_sgodn")

[node name="Robit" type="Sprite2D" parent="."]
position = Vector2(116, -4)
texture = ExtResource("4_j6fjg")

[node name="shovelingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_stpg4")

[node name="fireSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2mche")
